--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0030.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0030.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0030.png">
-      <!--<div class="ocr_carea" title="bbox 242 102 2016 3124">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 266 109 1264 147">
         <span id="w_0" class="ocr_word" title="bbox 266 109 419 146">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 264 218 1995 275">
         <span id="w_2" class="ocr_word" title="bbox 264 218 346 262">
           <span class="alternatives">
@@ -140,17 +136,11 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1911 307 1995 334">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ma-</ins>
+            <ins title="nlp 2.00">maxime</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 266 359 1996 417">
-        <span id="w_21" class="ocr_word" title="bbox 266 360 378 402">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iime</ins>
-            <del title="nlp 0.90">maiime</del>
-          </span>
-        </span>
         <span id="w_22" class="ocr_word" title="bbox 409 361 567 415">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">placita</ins>
@@ -225,9 +215,9 @@
             <del title="nlp 0.90">admonent</del>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 896 429 939 487" xml:lang="grc">
+        <span id="w_34" class="ocr_word" title="bbox 896 429 939 487" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">(ξ</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 966 430 1022 473">
@@ -237,12 +227,12 @@
         </span>
         <span id="w_36" class="ocr_word" title="bbox 1047 429 1129 487">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">in):</ins>
+            <ins title="nlp 2.00">in):</ins>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 1160 430 1327 486">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„Habe8</ins>
+            <ins title="nlp 2.00">,, Ηabes</ins>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1360 447 1419 486">
@@ -265,17 +255,11 @@
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1671 434 1996 488">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">perturbationi-</ins>
+            <ins title="nlp 2.00">perturbationibus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 264 500 1997 558">
-        <span id="w_42" class="ocr_word" title="bbox 264 502 342 544">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">bus</ins>
-            <del title="nlp 0.90">perturbationibus</del>
-          </span>
-        </span>
         <span id="w_43" class="ocr_word" title="bbox 376 502 594 545">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">enucleate</ins>
@@ -320,20 +304,14 @@
         </span>
         <span id="w_50" class="ocr_word" title="bbox 1791 504 1997 547">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">disserun-</ins>
+            <ins title="nlp 2.00">disseruntur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 263 571 1996 629">
-        <span id="w_51" class="ocr_word" title="bbox 263 574 334 615">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tur</ins>
-            <del title="nlp 0.90">disseruntur</del>
-          </span>
-        </span>
         <span id="w_52" class="ocr_word" title="bbox 365 572 601 616">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">subtilius."</ins>
+            <ins title="nlp 2.00">subtilius."</ins>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 660 572 795 629">
@@ -372,11 +350,6 @@
             <del title="nlp 0.90">perturbationibus</del>
           </span>
         </span>
-        <span id="w_59" class="ocr_word" title="bbox 1880 574 1996 618">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">.libri</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 262 643 1996 699">
         <span id="w_60" class="ocr_word" title="bbox 262 643 346 686">
@@ -397,12 +370,12 @@
             <del title="nlp 0.90">nomine</del>
           </span>
         </span>
-        <span id="w_63" class="ocr_word" title="bbox 739 660 791 686" xml:lang="grc">
+        <span id="w_63" class="ocr_word" title="bbox 739 660 791 686" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_64" class="ocr_word" title="bbox 842 644 995 698" xml:lang="grc">
+        <span id="w_64" class="ocr_word" title="bbox 842 644 995 698" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λογικά</ins>
           </span>
@@ -433,9 +406,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 264 712 1998 772">
-        <span id="w_69" class="ocr_word" title="bbox 264 712 584 769" xml:lang="grc">
+        <span id="w_69" class="ocr_word" title="bbox 264 712 584 769" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(θεραπευτικῷ</ins>
+            <ins class="alt" title="nlp 1.00">θεραπευτικῷ</ins>
           </span>
         </span>
         <span id="w_70" class="ocr_word" title="bbox 612 715 680 757">
@@ -444,7 +417,7 @@
             <del title="nlp 0.90">vel</del>
           </span>
         </span>
-        <span id="w_71" class="ocr_word" title="bbox 705 712 862 771" xml:lang="grc">
+        <span id="w_71" class="ocr_word" title="bbox 705 712 862 771" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἠθικῷ)</ins>
           </span>
@@ -557,7 +530,7 @@
         </span>
         <span id="w_89" class="ocr_word" title="bbox 994 880 1048 886">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 1069 854 1129 898">
@@ -654,17 +627,11 @@
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1822 943 1997 987">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cognos-</ins>
+            <ins title="nlp 2.00">cognoscendam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 263 996 1997 1054">
-        <span id="w_106" class="ocr_word" title="bbox 263 997 437 1040">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cendam</ins>
-            <del title="nlp 0.90">cognoscendam</del>
-          </span>
-        </span>
         <span id="w_107" class="ocr_word" title="bbox 484 996 714 1054">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Chrysippi</ins>
@@ -728,8 +695,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 378 1137 1998 1195">
         <span id="w_117" class="ocr_word" title="bbox 378 1137 612 1183">
           <span class="alternatives">
@@ -757,7 +722,7 @@
         </span>
         <span id="w_121" class="ocr_word" title="bbox 1199 1140 1281 1195">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„de</ins>
+            <ins title="nlp 2.00">„de</ins>
           </span>
         </span>
         <span id="w_122" class="ocr_word" title="bbox 1311 1140 1506 1183">
@@ -780,16 +745,11 @@
         </span>
         <span id="w_125" class="ocr_word" title="bbox 1902 1157 1998 1185">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ma-</ins>
+            <ins title="nlp 2.00">malorum,"</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 261 1209 1999 1268">
-        <span id="w_126" class="ocr_word" title="bbox 261 1210 470 1262">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">lorum,"</ins>
-          </span>
-        </span>
         <span id="w_127" class="ocr_word" title="bbox 501 1224 586 1267">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quo</ins>
@@ -958,20 +918,14 @@
         </span>
         <span id="w_154" class="ocr_word" title="bbox 1940 1356 1999 1397">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lo-</ins>
+            <ins title="nlp 2.00">locos</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 262 1423 2000 1482">
-        <span id="w_155" class="ocr_word" title="bbox 262 1437 333 1465">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cos</ins>
-            <del title="nlp 0.90">locos</del>
-          </span>
-        </span>
         <span id="w_156" class="ocr_word" title="bbox 367 1448 421 1453">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_157" class="ocr_word" title="bbox 455 1438 487 1466">
@@ -1022,9 +976,9 @@
             <del title="nlp 0.90">transcursu</del>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 1715 1427 1739 1477" xml:lang="grc">
+        <span id="w_165" class="ocr_word" title="bbox 1715 1427 1739 1477" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">ξ</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_166" class="ocr_word" title="bbox 1765 1424 1821 1467">
@@ -1042,7 +996,7 @@
       <span class="ocr_line" title="bbox 263 1493 1998 1553">
         <span id="w_168" class="ocr_word" title="bbox 263 1518 319 1523">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_169" class="ocr_word" title="bbox 345 1496 488 1537">
@@ -1069,12 +1023,12 @@
             <del title="nlp 0.90">aliquis</del>
           </span>
         </span>
-        <span id="w_173" class="ocr_word" title="bbox 913 1493 1012 1549" xml:lang="grc">
+        <span id="w_173" class="ocr_word" title="bbox 913 1493 1012 1549" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_174" class="ocr_word" title="bbox 1045 1497 1195 1545" xml:lang="grc">
+        <span id="w_174" class="ocr_word" title="bbox 1045 1497 1195 1545" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τέλους</ins>
           </span>
@@ -1125,7 +1079,7 @@
         </span>
         <span id="w_182" class="ocr_word" title="bbox 573 1563 751 1622">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">opinio),</ins>
+            <ins title="nlp 2.00">opinio),</ins>
           </span>
         </span>
         <span id="w_183" class="ocr_word" title="bbox 795 1580 903 1620">
@@ -1234,17 +1188,11 @@
         </span>
         <span id="w_200" class="ocr_word" title="bbox 1838 1636 2000 1681">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stoico-</ins>
+            <ins title="nlp 2.00">Stoicorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 262 1706 1998 1763">
-        <span id="w_201" class="ocr_word" title="bbox 262 1722 357 1749">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rum</ins>
-            <del title="nlp 0.90">Stoicorum</del>
-          </span>
-        </span>
         <span id="w_202" class="ocr_word" title="bbox 384 1707 562 1749">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">moralia</ins>
@@ -1481,17 +1429,11 @@
         </span>
         <span id="w_240" class="ocr_word" title="bbox 1864 1922 1998 1965">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">homi-</ins>
+            <ins title="nlp 2.00">hominum,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 261 1990 1996 2049">
-        <span id="w_241" class="ocr_word" title="bbox 261 2007 376 2045">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">num,</ins>
-            <del title="nlp 0.90">hominum,</del>
-          </span>
-        </span>
         <span id="w_242" class="ocr_word" title="bbox 408 1991 459 2034">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">de</ins>
@@ -1610,17 +1552,11 @@
         </span>
         <span id="w_261" class="ocr_word" title="bbox 1879 2066 1996 2121">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">poni-</ins>
+            <ins title="nlp 2.00">ponimus,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 262 2134 1995 2192">
-        <span id="w_262" class="ocr_word" title="bbox 262 2149 375 2190">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mus,</ins>
-            <del title="nlp 0.90">ponimus,</del>
-          </span>
-        </span>
         <span id="w_263" class="ocr_word" title="bbox 418 2149 545 2191">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quam</ins>
@@ -1789,17 +1725,11 @@
         </span>
         <span id="w_290" class="ocr_word" title="bbox 1936 2294 1996 2323">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">se-</ins>
+            <ins title="nlp 2.00">secutus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 262 2347 1996 2406">
-        <span id="w_291" class="ocr_word" title="bbox 262 2350 383 2392">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cutuB</ins>
-            <del title="nlp 0.90">secutuB</del>
-          </span>
-        </span>
         <span id="w_292" class="ocr_word" title="bbox 417 2351 490 2392">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">est.</ins>
@@ -2210,17 +2140,11 @@
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1882 2776 1993 2819">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vide-</ins>
+            <ins title="nlp 2.00">videtur.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 258 2845 1993 2905">
-        <span id="w_359" class="ocr_word" title="bbox 258 2849 338 2889">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tur.</ins>
-            <del title="nlp 0.90">videtur.</del>
-          </span>
-        </span>
         <span id="w_360" class="ocr_word" title="bbox 401 2845 467 2889">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Ex</ins>
@@ -2271,19 +2195,19 @@
         </span>
         <span id="w_368" class="ocr_word" title="bbox 1867 2849 1893 2901">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_369" class="ocr_word" title="bbox 1918 2847 1993 2891">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">68:</ins>
+            <ins title="nlp 2.00">68:</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 258 2916 1993 2974">
         <span id="w_370" class="ocr_word" title="bbox 258 2916 539 2973">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„Cynicorum</ins>
+            <ins title="nlp 2.00">„Cynicorum</ins>
           </span>
         </span>
         <span id="w_371" class="ocr_word" title="bbox 571 2921 714 2961">
@@ -2336,17 +2260,11 @@
         </span>
         <span id="w_379" class="ocr_word" title="bbox 1933 2918 1993 2960">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">di-</ins>
+            <ins title="nlp 2.00">dicunt,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 260 2988 1992 3045">
-        <span id="w_380" class="ocr_word" title="bbox 260 2992 373 3044">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cunt,</ins>
-            <del title="nlp 0.90">dicunt,</del>
-          </span>
-        </span>
         <span id="w_381" class="ocr_word" title="bbox 405 2989 537 3045">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">siquis</ins>
@@ -2409,14 +2327,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 259 3060 1990 3119">
-        <span id="w_391" class="ocr_word" title="bbox 259 3061 377 3105" xml:lang="grc">
+        <span id="w_391" class="ocr_word" title="bbox 259 3061 377 3105" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΜΟ</ins>
+            <ins title="nlp 2.00">nullo </ins>
           </span>
         </span>
         <span id="w_392" class="ocr_word" title="bbox 427 3061 590 3105">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">modo."</ins>
+            <ins title="nlp 2.00">modo."</ins>
           </span>
         </span>
         <span id="w_393" class="ocr_word" title="bbox 657 3060 767 3105">
@@ -2450,8 +2368,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
