--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0031.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0031.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0031.png">
-      <!--<div class="ocr_carea" title="bbox 208 102 1994 3142">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 962 108 1964 146">
         <span id="w_0" class="ocr_word" title="bbox 962 110 1229 146">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 226 216 1972 276">
         <span id="w_2" class="ocr_word" title="bbox 226 235 342 264">
           <span class="alternatives">
@@ -78,7 +74,7 @@
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1849 219 1875 272">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1900 218 1972 274">
@@ -276,7 +272,7 @@
         </span>
         <span id="w_42" class="ocr_word" title="bbox 887 504 1067 559">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">^^quibus</ins>
+            <ins title="nlp 2.00">,, quibus</ins>
           </span>
         </span>
         <span id="w_43" class="ocr_word" title="bbox 1112 517 1189 558">
@@ -293,7 +289,7 @@
         </span>
         <span id="w_45" class="ocr_word" title="bbox 1550 504 1795 558">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">assentior,"</ins>
+            <ins title="nlp 2.00">assentior,"</ins>
           </span>
         </span>
         <span id="w_46" class="ocr_word" title="bbox 1845 518 1971 559">
@@ -348,17 +344,11 @@
         </span>
         <span id="w_54" class="ocr_word" title="bbox 1756 574 1974 617">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">attenden-</ins>
+            <ins title="nlp 2.00">attendendum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 226 646 1972 703">
-        <span id="w_55" class="ocr_word" title="bbox 226 648 326 691">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dum</ins>
-            <del title="nlp 0.90">attendendum</del>
-          </span>
-        </span>
         <span id="w_56" class="ocr_word" title="bbox 360 651 436 703">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">est,</ins>
@@ -453,17 +443,11 @@
         </span>
         <span id="w_71" class="ocr_word" title="bbox 1873 732 1975 773">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quo-</ins>
+            <ins title="nlp 2.00">quoque,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 226 789 1975 847">
-        <span id="w_72" class="ocr_word" title="bbox 226 805 320 847">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que,</ins>
-            <del title="nlp 0.90">quoque,</del>
-          </span>
-        </span>
         <span id="w_73" class="ocr_word" title="bbox 351 791 464 846">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quod</ins>
@@ -634,7 +618,7 @@
         </span>
         <span id="w_100" class="ocr_word" title="bbox 727 1006 753 1057">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_101" class="ocr_word" title="bbox 783 1005 832 1046">
@@ -644,7 +628,7 @@
         </span>
         <span id="w_102" class="ocr_word" title="bbox 879 1003 952 1058">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„In</ins>
+            <ins title="nlp 2.00">„In</ins>
           </span>
         </span>
         <span id="w_103" class="ocr_word" title="bbox 992 1004 1213 1060">
@@ -705,7 +689,7 @@
         </span>
         <span id="w_112" class="ocr_word" title="bbox 1116 1074 1393 1130">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ponendam/’</ins>
+            <ins title="nlp 2.00">ponendam, “</ins>
           </span>
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1426 1089 1534 1129">
@@ -722,17 +706,11 @@
         </span>
         <span id="w_115" class="ocr_word" title="bbox 1836 1089 1974 1117">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">assen-</ins>
+            <ins title="nlp 2.00">assensionis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 226 1145 1974 1204">
-        <span id="w_116" class="ocr_word" title="bbox 226 1148 357 1190">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sionis</ins>
-            <del title="nlp 0.90">assensionis</del>
-          </span>
-        </span>
         <span id="w_117" class="ocr_word" title="bbox 390 1148 660 1204">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">significatiO;</ins>
@@ -783,20 +761,14 @@
         </span>
         <span id="w_125" class="ocr_word" title="bbox 1835 1161 1974 1189">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">assen-</ins>
+            <ins title="nlp 2.00">assensionis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 226 1218 1976 1275">
-        <span id="w_126" class="ocr_word" title="bbox 226 1220 375 1262">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sionis:</ins>
-            <del title="nlp 0.90">assensionis:</del>
-          </span>
-        </span>
         <span id="w_127" class="ocr_word" title="bbox 416 1233 494 1274">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">,^e</ins>
+            <ins title="nlp 2.00">,, ne</ins>
           </span>
         </span>
         <span id="w_128" class="ocr_word" title="bbox 526 1220 561 1261">
@@ -881,7 +853,7 @@
         </span>
         <span id="w_141" class="ocr_word" title="bbox 1067 1289 1333 1345">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">sequantur,"</ins>
+            <ins title="nlp 2.00">sequantur,"</ins>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 1379 1304 1527 1344">
@@ -898,17 +870,11 @@
         </span>
         <span id="w_144" class="ocr_word" title="bbox 1830 1290 1975 1333">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">adum-</ins>
+            <ins title="nlp 2.00">adumbrata</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 226 1361 1975 1417">
-        <span id="w_145" class="ocr_word" title="bbox 226 1363 346 1405">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">brata</ins>
-            <del title="nlp 0.90">adumbrata</del>
-          </span>
-        </span>
         <span id="w_146" class="ocr_word" title="bbox 389 1363 454 1404">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sit.</ins>
@@ -1065,17 +1031,11 @@
         </span>
         <span id="w_171" class="ocr_word" title="bbox 1868 1505 1974 1547">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">anti-</ins>
+            <ins title="nlp 2.00">antiquiorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 226 1576 1974 1633">
-        <span id="w_172" class="ocr_word" title="bbox 226 1577 424 1632">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quiorum</ins>
-            <del title="nlp 0.90">antiquiorum</del>
-          </span>
-        </span>
         <span id="w_173" class="ocr_word" title="bbox 457 1577 638 1633">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">placitis,</ins>
@@ -1132,17 +1092,11 @@
         </span>
         <span id="w_182" class="ocr_word" title="bbox 1800 1576 1974 1632">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inquisi-</ins>
+            <ins title="nlp 2.00">inquisivisse</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 226 1647 1973 1703">
-        <span id="w_183" class="ocr_word" title="bbox 226 1648 335 1691">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">visse</ins>
-            <del title="nlp 0.90">inquisivisse</del>
-          </span>
-        </span>
         <span id="w_184" class="ocr_word" title="bbox 368 1648 570 1691">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">videatur.</ins>
@@ -1417,17 +1371,11 @@
         </span>
         <span id="w_228" class="ocr_word" title="bbox 1791 1934 1973 1977">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">illustra-</ins>
+            <ins title="nlp 2.00">illustratus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 225 2005 1971 2063">
-        <span id="w_229" class="ocr_word" title="bbox 225 2010 294 2049">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tus</ins>
-            <del title="nlp 0.90">illustratus</del>
-          </span>
-        </span>
         <span id="w_230" class="ocr_word" title="bbox 321 2007 388 2062">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sit,</ins>
@@ -1626,14 +1574,14 @@
             <del title="nlp 0.90">e.</del>
           </span>
         </span>
-        <span id="w_262" class="ocr_word" title="bbox 350 2235 410 2279" xml:lang="grc">
+        <span id="w_262" class="ocr_word" title="bbox 350 2235 410 2279" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ν.</ins>
+            <ins title="nlp 2.00">gr.</ins>
           </span>
         </span>
-        <span id="w_263" class="ocr_word" title="bbox 437 2236 489 2265" xml:lang="grc">
+        <span id="w_263" class="ocr_word" title="bbox 437 2236 489 2265" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">.ι</ins>
+            <ins title="nlp 2.00">ex</ins>
           </span>
         </span>
         <span id="w_264" class="ocr_word" title="bbox 514 2220 735 2265">
@@ -1680,17 +1628,11 @@
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1839 2220 1972 2264">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Heca-</ins>
+            <ins title="nlp 2.00">Hecatonis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 226 2291 1971 2349">
-        <span id="w_272" class="ocr_word" title="bbox 226 2293 339 2335">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tonis</ins>
-            <del title="nlp 0.90">Hecatonis</del>
-          </span>
-        </span>
         <span id="w_273" class="ocr_word" title="bbox 371 2293 540 2349">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">placitis</ins>
@@ -1735,7 +1677,7 @@
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1748 2291 1971 2335">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Hii^zelius.</ins>
+            <ins title="nlp 2.00">Hirzelius.</ins>
           </span>
         </span>
       </span>
@@ -1816,7 +1758,7 @@
         </span>
         <span id="w_293" class="ocr_word" title="bbox 475 2461 482 2469">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">•</ins>
+            <ins title="nlp 2.00">•</ins>
           </span>
         </span>
         <span id="w_294" class="ocr_word" title="bbox 494 2450 580 2478">
@@ -2013,7 +1955,7 @@
         </span>
         <span id="w_325" class="ocr_word" title="bbox 695 2675 750 2681">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_326" class="ocr_word" title="bbox 783 2665 881 2693">
@@ -2074,7 +2016,7 @@
         </span>
         <span id="w_335" class="ocr_word" title="bbox 1119 2746 1173 2752">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_336" class="ocr_word" title="bbox 1212 2720 1326 2777">
@@ -2197,17 +2139,11 @@
         </span>
         <span id="w_355" class="ocr_word" title="bbox 1723 2864 1971 2908">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fundamen-</ins>
+            <ins title="nlp 2.00">fundamentum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 228 2935 1971 2994">
-        <span id="w_356" class="ocr_word" title="bbox 228 2939 320 2979">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tum</ins>
-            <del title="nlp 0.90">fundamentum</del>
-          </span>
-        </span>
         <span id="w_357" class="ocr_word" title="bbox 359 2952 467 2993">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">esse,</ins>
@@ -2264,17 +2200,11 @@
         </span>
         <span id="w_366" class="ocr_word" title="bbox 1908 2952 1971 2979">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ar-</ins>
+            <ins title="nlp 2.00">arcessita.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 229 3006 1971 3064">
-        <span id="w_367" class="ocr_word" title="bbox 229 3009 390 3051">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cessita.</ins>
-            <del title="nlp 0.90">arcessita.</del>
-          </span>
-        </span>
         <span id="w_368" class="ocr_word" title="bbox 452 3007 532 3050">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">His</ins>
@@ -2374,8 +2304,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
