--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0036.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0036.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0036.png">
-      <!--<div class="ocr_carea" title="bbox 322 168 2096 3190">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 339 175 1334 213">
         <span id="w_0" class="ocr_word" title="bbox 339 175 491 213">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 338 284 2071 343">
         <span id="w_2" class="ocr_word" title="bbox 338 286 422 328">
           <span class="alternatives">
@@ -84,17 +80,11 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1944 287 2071 330">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inter-</ins>
+            <ins title="nlp 2.00">intercedat.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 341 356 2071 415">
-        <span id="w_12" class="ocr_word" title="bbox 341 357 472 399">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cedat.</ins>
-            <del title="nlp 0.90">intercedat.</del>
-          </span>
-        </span>
         <span id="w_13" class="ocr_word" title="bbox 534 356 649 406">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Quae</ins>
@@ -145,17 +135,11 @@
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1962 357 2071 401">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stoi-</ins>
+            <ins title="nlp 2.00">Stoicorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 340 427 2073 483">
-        <span id="w_22" class="ocr_word" title="bbox 340 441 486 471">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">corum</ins>
-            <del title="nlp 0.90">Stoicorum</del>
-          </span>
-        </span>
         <span id="w_23" class="ocr_word" title="bbox 519 427 755 469">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">doctrinam</ins>
@@ -262,17 +246,11 @@
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1941 500 2073 543">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">conti-</ins>
+            <ins title="nlp 2.00">continent,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 339 568 2073 626">
-        <span id="w_41" class="ocr_word" title="bbox 339 571 455 624">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nent,</ins>
-            <del title="nlp 0.90">continent,</del>
-          </span>
-        </span>
         <span id="w_42" class="ocr_word" title="bbox 487 568 561 612">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sed</ins>
@@ -329,17 +307,11 @@
         </span>
         <span id="w_51" class="ocr_word" title="bbox 1932 571 2073 626">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">singu-</ins>
+            <ins title="nlp 2.00">singulos</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 339 639 2072 697">
-        <span id="w_52" class="ocr_word" title="bbox 339 639 404 681">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">los</ins>
-            <del title="nlp 0.90">singulos</del>
-          </span>
-        </span>
         <span id="w_53" class="ocr_word" title="bbox 436 643 629 682">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">auctores</ins>
@@ -358,12 +330,12 @@
             <del title="nlp 0.90">Nam</del>
           </span>
         </span>
-        <span id="w_56" class="ocr_word" title="bbox 1076 654 1248 695" xml:lang="grc">
+        <span id="w_56" class="ocr_word" title="bbox 1076 654 1248 695" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πνεῦμα</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1290 641 1520 696" xml:lang="grc">
+        <span id="w_57" class="ocr_word" title="bbox 1290 641 1520 696" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πυροειδὲς</ins>
           </span>
@@ -394,12 +366,12 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 337 710 2072 767">
-        <span id="w_62" class="ocr_word" title="bbox 337 725 510 766" xml:lang="grc">
+        <span id="w_62" class="ocr_word" title="bbox 337 725 510 766" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πνεῦμα</ins>
           </span>
         </span>
-        <span id="w_63" class="ocr_word" title="bbox 540 715 774 765" xml:lang="grc">
+        <span id="w_63" class="ocr_word" title="bbox 540 715 774 765" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔνθερμον,</ins>
           </span>
@@ -504,17 +476,11 @@
         </span>
         <span id="w_80" class="ocr_word" title="bbox 2005 798 2074 826">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ex-</ins>
+            <ins title="nlp 2.00">excerptum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 339 853 2074 909">
-        <span id="w_81" class="ocr_word" title="bbox 339 855 531 907">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cerptum</ins>
-            <del title="nlp 0.90">excerptum</del>
-          </span>
-        </span>
         <span id="w_82" class="ocr_word" title="bbox 563 856 685 908">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">esset,</ins>
@@ -565,17 +531,11 @@
         </span>
         <span id="w_90" class="ocr_word" title="bbox 1977 854 2074 896">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">doc-</ins>
+            <ins title="nlp 2.00">doctrina</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 337 923 2073 980">
-        <span id="w_91" class="ocr_word" title="bbox 337 924 450 966">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">trina</ins>
-            <del title="nlp 0.90">doctrina</del>
-          </span>
-        </span>
         <span id="w_92" class="ocr_word" title="bbox 480 926 524 965">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">et</ins>
@@ -639,8 +599,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 457 1065 2073 1123">
         <span id="w_102" class="ocr_word" title="bbox 457 1065 548 1107">
           <span class="alternatives">
@@ -773,8 +731,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 457 1278 2073 1335">
         <span id="w_123" class="ocr_word" title="bbox 457 1278 607 1334">
           <span class="alternatives">
@@ -838,17 +794,11 @@
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1985 1281 2073 1322">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lau-</ins>
+            <ins title="nlp 2.00">laudationibus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 340 1350 2074 1407">
-        <span id="w_134" class="ocr_word" title="bbox 340 1350 582 1392">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dationibus</ins>
-            <del title="nlp 0.90">laudationibus</del>
-          </span>
-        </span>
         <span id="w_135" class="ocr_word" title="bbox 613 1351 659 1393">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">in</ins>
@@ -936,8 +886,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 460 1491 2076 1549">
         <span id="w_149" class="ocr_word" title="bbox 460 1491 543 1534">
           <span class="alternatives">
@@ -989,17 +937,11 @@
         </span>
         <span id="w_157" class="ocr_word" title="bbox 2005 1508 2076 1535">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">na-</ins>
+            <ins title="nlp 2.00">natura.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 339 1563 2078 1620">
-        <span id="w_158" class="ocr_word" title="bbox 339 1566 446 1606">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tura.</ins>
-            <del title="nlp 0.90">natura.</del>
-          </span>
-        </span>
         <span id="w_159" class="ocr_word" title="bbox 508 1563 652 1618">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Atque</ins>
@@ -1168,17 +1110,11 @@
         </span>
         <span id="w_186" class="ocr_word" title="bbox 1986 1721 2077 1762">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">per-</ins>
+            <ins title="nlp 2.00">permultae</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 341 1776 2076 1833">
-        <span id="w_187" class="ocr_word" title="bbox 341 1777 499 1819">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">multae</ins>
-            <del title="nlp 0.90">permultae</del>
-          </span>
-        </span>
         <span id="w_188" class="ocr_word" title="bbox 530 1777 713 1819">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">fuerunt.</ins>
@@ -1347,7 +1283,7 @@
         </span>
         <span id="w_215" class="ocr_word" title="bbox 1850 1919 2078 1974">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Epicureo-</ins>
+            <ins title="nlp 2.00">Epicureorum</ins>
           </span>
         </span>
       </span>
@@ -1700,17 +1636,11 @@
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1934 2359 2079 2400">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quam-</ins>
+            <ins title="nlp 2.00">quamvis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 341 2415 2079 2474">
-        <span id="w_273" class="ocr_word" title="bbox 341 2417 408 2461">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vis</ins>
-            <del title="nlp 0.90">quamvis</del>
-          </span>
-        </span>
         <span id="w_274" class="ocr_word" title="bbox 439 2418 570 2460">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">exilia</ins>
@@ -1767,17 +1697,11 @@
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1888 2415 2079 2472">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">agnosci-</ins>
+            <ins title="nlp 2.00">agnoscitur.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 342 2486 2078 2544">
-        <span id="w_284" class="ocr_word" title="bbox 342 2491 424 2532">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tur.</ins>
-            <del title="nlp 0.90">agnoscitur.</del>
-          </span>
-        </span>
         <span id="w_285" class="ocr_word" title="bbox 474 2488 599 2532">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Patet</ins>
@@ -1890,17 +1814,11 @@
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1983 2572 2079 2613">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pro-</ins>
+            <ins title="nlp 2.00">profectus,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 342 2631 2077 2687">
-        <span id="w_304" class="ocr_word" title="bbox 342 2632 491 2686">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fectus,</ins>
-            <del title="nlp 0.90">profectus,</del>
-          </span>
-        </span>
         <span id="w_305" class="ocr_word" title="bbox 535 2646 662 2687">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quam</ins>
@@ -2045,17 +1963,11 @@
         </span>
         <span id="w_328" class="ocr_word" title="bbox 2008 2771 2077 2813">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ad-</ins>
+            <ins title="nlp 2.00">adumbrabat.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 345 2843 2076 2901">
-        <span id="w_329" class="ocr_word" title="bbox 345 2845 579 2887">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">umbrabat.</ins>
-            <del title="nlp 0.90">adumbrabat.</del>
-          </span>
-        </span>
         <span id="w_330" class="ocr_word" title="bbox 642 2844 792 2900">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Itaque</ins>
@@ -2272,17 +2184,11 @@
             <del title="nlp 0.90">eius</del>
           </span>
         </span>
-        <span id="w_365" class="ocr_word" title="bbox 1968 3058 2077 3097">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aeta-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 345 3127 2077 3185">
         <span id="w_366" class="ocr_word" title="bbox 345 3132 430 3172">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tem</ins>
-            <del title="nlp 0.90">aetatem</del>
+            <ins title="nlp 2.00">aetatem</ins>
           </span>
         </span>
         <span id="w_367" class="ocr_word" title="bbox 464 3130 695 3185">
@@ -2340,8 +2246,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
